fix(Navbar): Now follows scrollbar, changed color
background color is now slightly darker to make it more noticeable

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@ body {
 
 :root {
   --bg-color: #1E1E1E;
-  --navbar-color: rgba(30,30,30,0.85);
+  --navbar-color: rgba(26,26,26,0.85);
   --bg-card-color: #252525;
   --primary-color: #D9D9D9;
   --hero-text-color: #FFFFFF;
